--- a/ProjectA/ProjectA/ProjectA.csproj
+++ b/ProjectA/ProjectA/ProjectA.csproj
@@ -118,6 +118,12 @@
       <DependentUpon>ProjectAdvisor.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowGroupProjects.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShowGroupProjects.Designer.cs">
+      <DependentUpon>ShowGroupProjects.cs</DependentUpon>
+    </Compile>
     <Compile Include="StudentsRecord.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +196,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ShowGroupProjects.resx">
+      <DependentUpon>ShowGroupProjects.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StudentsRecord.resx">
       <DependentUpon>StudentsRecord.cs</DependentUpon>
     </EmbeddedResource>
